@@ -145,9 +145,8 @@ docHead.appendChild(newLink);
 <hr>
 <p id="archive" class="legend">Compilation intermediate files: <a href="bench-data-@.tar.bz2">bench-data-@.tar.bz2</a></p>
 </h5>
-<hr>
 </body>
-<script>setupPage()</script>
+<script>setupPage();</script>
+<hr>
 <h6 align="left">copyright &copy; 2012-2023, [iss@raxiss]</h6>
 </html>
-
